Rework HN digest for 2025-12-07